changed some css for small screen and config for site deployment to solve the following problems: 1. The Dropdown list of the nav button is invisiable because of the same color of background color and font color. 2. The content colomn on the small screen is too small. 3. the heading text on the small screen is too big.

--- a/_sass/custom/_base.scss
+++ b/_sass/custom/_base.scss
@@ -11,7 +11,30 @@ h6 {
 
 h1 {
   margin-top: 0;
+  font-size: $h-size-2;
+
+  @include breakpoint($large) {
+    font-size: $h-size-1;
+  }
 }
+
+h2 {
+  font-size: $h-size-3;
+
+  @include breakpoint($large) {
+    font-size: $h-size-2;
+  }
+}
+
+h3 {
+  font-size: $h-size-4;
+
+  @include breakpoint($large) {
+    font-size: $h-size-3;
+  }
+}
+
+
 
 p {
   margin-bottom: 1.5em;
